# client-test

./: .gitignore  build_and_dist.py  card_imports.txt  main.py  old_code  pyproject.toml  save.sav  screen_test.py  test.py
aseprite/: logo.aseprite  logo.kra
game/: game.py  me.py  stuff to document   user.py
game/cards/: card.py
game/cards/earth/: earthquakec.py  elixirc.py  grassc.py  monumentc.py  plantc.py  rockc.py
game/cards/fire/: 499pc.py  bonfirec.py  coalc.py  explosionc.py  flamec.py  kaic.py
game/cards/wind/: galec.py  hurricanec.py  rainc.py  razorc.py  tornadoc.py  zoomc.py
logos storage/: base.kra  earth.kra  earth.kra~  fire.kra  fire.kra~  wind.kra  wind.kra~
ui/css/: card_pulling.tcss  card_selection.tcss  game.tcss  game_join.tcss  home.tcss  popup.tcss  search.tcss  settings.tcss  sub.tcss
ui/custom/screens/: popup.py  subscreen.py
ui/custom/widgets/: games.py  image.py
ui/screens/: card_management.py  game.py  game_join.py  game_searching.py  home.py  pulling_menu.py  settings.py
utils/: networkmanager.py  storage.py  useful.py
